[workspace]

members = [
  "chapter-1",
  "chapter-2",
  "chapter-3",
]

# TODO: remove once luminance crates are on crates.io
[patch.crates-io]
luminance = { path = "../../luminance-rs/luminance" }
luminance-derive = { path = "../../luminance-rs/luminance-derive" }
luminance-gl = { path = "../../luminance-rs/luminance-gl" }
luminance-glfw = { path = "../../luminance-rs/luminance-glfw" }
luminance-windowing = { path = "../../luminance-rs/luminance-windowing" }
