[workspace]

members = [
  "chapter-1",
  "chapter-2",
  "chapter-3",
]

# TODO: remove once luminance crates are on crates.io
[patch.crates-io]
luminance = { path = "../../luminance/luminance" }
luminance-derive = { path = "../../luminance/luminance-derive" }
luminance-gl = { path = "../../luminance/luminance-gl" }
luminance-glfw = { path = "../../luminance/luminance-glfw" }
luminance-windowing = { path = "../../luminance/luminance-windowing" }
