[package]
name = "chapter-3"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17"
glfw = "0.41"
luminance = "0.44"
luminance-derive = "0.7"
luminance-front = "0.4"
luminance-glfw = "0.16"
luminance-windowing = "0.10"
try-guard = "0.2"
wavefront_obj = "10"
